--- a/WebContent/css/Custom.css
+++ b/WebContent/css/Custom.css
@@ -1,12 +1,11 @@
 #footerflag
-{background-image:url(Images/fototercflag.JPG);
-	
-	bottom: 650px;
+{background-image:url(../Images/fototercflag.JPG);
+	position: absolute;
+	bottom: 0px;
 	display:block;
 	width:100%;
-	height:8px;
+	height:5px;
 	right:0px;
-	 
 
 
 
@@ -14,7 +13,7 @@
 #header
 {
 
-height: 80px;
+height: 100px;
 
 }
 
@@ -27,68 +26,104 @@ height: 80px;
 /*
  * General styles
  */
+ body {
+     padding-top: 90px;
+	
+ }
+ .panel-login {
 
-body, html{
-     height: 100%;
- 	background-repeat: no-repeat;
-
- 	font-family: 'Oxygen', sans-serif;
-}
-
-.main{
- 	margin-top: 70px;
-}
-
-h1.title {
-	font-size: 50px;
-	font-family: 'Passion One', cursive;
-	font-weight: 400;
-}
-
-hr{
-	width: 25%;
-	color: #fff;
-}
-
-.form-group{
-	margin-bottom: 15px;
-}
-
-label{
-	margin-bottom: 15px;
-}
-
-input,
-input::-webkit-input-placeholder {
-    font-size: 11px;
-    padding-top: 3px;
-}
-
-.main-login{
+ 	border-color: #ccc;
+ 	-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+ 	-moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+ 	box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
+ }
+ .panel-login>.panel-heading {
+ 	color: #00415d;
  	background-color: #fff;
-    /* shadows and rounded borders */
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+ 	border-color: #fff;
+ 	text-align:center;
+ }
+ .panel-login>.panel-heading a{
+ 	text-decoration: none;
+ 	color: #666;
+ 	font-weight: bold;
+ 	font-size: 15px;
+ 	-webkit-transition: all 0.1s linear;
+ 	-moz-transition: all 0.1s linear;
+ 	transition: all 0.1s linear;
+ }
+ .panel-login>.panel-heading a.active{
+ 	color: #029f5b;
+ 	font-size: 18px;
+ }
+ .panel-login>.panel-heading hr{
+ 	margin-top: 10px;
+ 	margin-bottom: 0px;
+ 	clear: both;
+ 	border: 0;
+ 	height: 1px;
+ 	background-image: -webkit-linear-gradient(left,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.15),rgba(0, 0, 0, 0));
+ 	background-image: -moz-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
+ 	background-image: -ms-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
+ 	background-image: -o-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.15),rgba(0,0,0,0));
+ }
+ .panel-login input[type="text"],.panel-login input[type="email"],.panel-login input[type="password"] {
+ 	height: 45px;
+ 	border: 1px solid #ddd;
+ 	font-size: 16px;
+ 	-webkit-transition: all 0.1s linear;
+ 	-moz-transition: all 0.1s linear;
+ 	transition: all 0.1s linear;
+ }
+ .panel-login input:hover,
+ .panel-login input:focus {
+ 	outline:none;
+ 	-webkit-box-shadow: none;
+ 	-moz-box-shadow: none;
+ 	box-shadow: none;
+ 	border-color: #ccc;
+ }
+ .btn-login {
+ 	background-color: #59B2E0;
+ 	outline: none;
+ 	color: #fff;
+ 	font-size: 14px;
+ 	height: auto;
+ 	font-weight: normal;
+ 	padding: 14px 0;
+ 	text-transform: uppercase;
+ 	border-color: #59B2E6;
+ }
+ .btn-login:hover,
+ .btn-login:focus {
+ 	color: #fff;
+ 	background-color: #53A3CD;
+ 	border-color: #53A3CD;
+ }
+ .forgot-password {
+ 	text-decoration: underline;
+ 	color: #888;
+ }
+ .forgot-password:hover,
+ .forgot-password:focus {
+ 	text-decoration: underline;
+ 	color: #666;
+ }
 
-}
-
-.main-center{
- 	margin-top: 30px;
- 	margin: 0 auto;
- 	max-width: 600px;
-    padding: 40px 40px;
-
-}
-
-.login-button{
-	margin-top: 5px;
-}
-
-.login-register{
-	font-size: 11px;
-	text-align: center;
-}
+ .btn-register {
+ 	background-color: #1CB94E;
+ 	outline: none;
+ 	color: #fff;
+ 	font-size: 14px;
+ 	height: auto;
+ 	font-weight: normal;
+ 	padding: 14px 0;
+ 	text-transform: uppercase;
+ 	border-color: #1CB94A;
+ }
+ .btn-register:hover,
+ .btn-register:focus {
+ 	color: #fff;
+ 	background-color: #1CA347;
+ 	border-color: #1CA347;
+ }
